; ModuleID = '/home/carl/AnghaBench/8cc/extr_lex.c_skip_char.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_lex.c_skip_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @skip_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skip_char() #0 {
  %1 = alloca i32, align 4
  %2 = call signext i8 (...) @readc()
  %3 = sext i8 %2 to i32
  %4 = icmp eq i32 %3, 92
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call signext i8 (...) @readc()
  br label %7

7:                                                ; preds = %5, %0
  %8 = call signext i8 (...) @readc()
  %9 = sext i8 %8 to i32
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %19, %7
  %11 = load i32, i32* %1, align 4
  %12 = load i32, i32* @EOF, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32, i32* %1, align 4
  %16 = icmp ne i32 %15, 39
  br label %17

17:                                               ; preds = %14, %10
  %18 = phi i1 [ false, %10 ], [ %16, %14 ]
  br i1 %18, label %19, label %22

19:                                               ; preds = %17
  %20 = call signext i8 (...) @readc()
  %21 = sext i8 %20 to i32
  store i32 %21, i32* %1, align 4
  br label %10

22:                                               ; preds = %17
  ret void
}

declare dso_local signext i8 @readc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
